# personalized_eco_routing

./: .gitignore  Dockerfile  Makefile  README.md  directions_test.go  elevations_test.go  go.mod  go.sum  main.go  regression_test.go  root-cortex-349414-55c130bb3cf4.json  routesPreffered_test.go  speed_test.go  test_help.go
createUserHandler/: createUserHandler.go
dataHandler/: dataHandler.go  dataHandlerTypes.go  loadDataHandler.go
deleteUserHandler/: deleteUserHandler.go  deleteUserHandlerTypes.go
directionsHandler/: directionsHandler.go
googleApiInteraction/: directionsInter.go  directionsRes.go  elevationsInter.go  routesInter.go  speedLimitInter.go
lib/: .gitignore  regression.h
lib/regression/: Cargo.toml
lib/regression/src/: lib.rs  regression.rs  regression_inputs.rs  supervised_inputs.rs
lib/regression/src/neural/: layer.rs  mod.rs  neural_inputs.rs  neuron.rs  nn.rs
prisma/: schema.prisma
tests/: db_test.go  directions_test.go  elevations_test.go  regression_test.go  routesPreffered_test.go  speed_test.go  test_help.go  verification_test.go
util/: initClient.go  integralCalc.go  randSeqGen.go  verify.go
util/gas_calcs/: gas_calc.go
util/types/: customRoutes.go  directionsReq.go  enums.go
