[package]
name = "regression"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="*", features=["derive"]}
serde_json="*"
libc = "0.2.2"
env_logger = "0.8.4"
log = "0.4.14"
nalgebra = "0.9.0"