[package]
edition = "2021"
name = "regression"
version = "0.1.0"
[dependencies]
env_logger = "0.8.4"
libc = "0.2.2"
log = "0.4.14"
nalgebra = "0.9.0"
rand = "*"
serde_json = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[lib]
crate-type = ["staticlib", "cdylib"]
c = "0.2.2"
env_logger = "0.8.4"
log = "0.4.14"
nalgebra = "0.9.0"